# oarc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  howToStartOarcApi.md  pyproject.toml  setup.bat  setup.cfg  setup.py  setup.sh
.github/workflows/: codeql.yml
docs/: buildDoc.txt  how_to_start_oarc.md  oarc_dir_structure.md
docs/moms/: mopa_diagram.mermaid
docs/roadmap/: roadmap.md
docs/speech_to_speech/: oarc_sts_architecture.md  ranchez_silence_wake_docs.md  speech-system-flowchart.mermaid
docs/what_is_an_agent/: agentic-action-spaces-and-intercommunication-protocols.md  mom_architectures.mermaid  mom_architectures_docs.md  mom_radar_diagrams.mermaid  mom_speculation.md  ollama-integration-guide-condensed.md  ollama-integration-guide.md  ollama_json_artifacting.md  todoAgents.md  what_is_an_agent.md
examples/: c3po_cli_and_ui.py  sts_example.py
examples/example_1/: sts_example.py
examples/speech_2_speech/: c3po_cli_and_ui.py  oarc_mcp_api.py  sts_example.py
oarc/: __init__.py  api.py  cli.py  main.py  oarc.py  oarc_api.py  setup.py  test_oarc.py
oarc/agentChef/: TODO_UPGRADE.py  __TODO.md  datasetAgents.py
oarc/agents/auto_coder/: TODO_CODER_TERMINAL_CMD_ACCESS.md  TODOregenerativeSelfModification.md  __TODO.md  heartbeat2.py
oarc/aiml/: __init__.py  image-generator-readme.md  image_generator_class.py
oarc/api/: AgentApi.py  LlmApi.py  __init__.py  __oarc_fastapi_OLD.py  agent_access.py  agent_api.py  api.py  llm_api.py  llm_prompt_api.py  model_request.py  oarcFastAPI_OLD.py  oarc_api.py  spell_loader.py
oarc/app/: __init__.py  app.py
oarc/artifacting/: artifact_parser.py  classification.py  ollama-pyqt-json-formatting.md
oarc/artifacting/todo/: artifact_parser.py
oarc/autoCoderAgent/: TODOregenerativeSelfModification.md  api-inator.py  codeFromScratch.py  intelligentMerge.py  regenerativeSelfModification
oarc/avatars/museTalk/: TODO.md  TODO_UPGRADE.txt
oarc/base_api/: BaseToolAPI.py  __init__.py  base_tool_api.py
oarc/botServices/discordBot/: discordVoiceChatBot.py
oarc/botServices/twitchBot/: TODO.txt
oarc/bots/discord/: __TODO.md  text_chatbot.py  voice_chatbot.py
oarc/bots/twitch/: __TODO.md
oarc/classification/: __init__.py  classification.py
oarc/cli/: __init__.py  cli.py  help.py  parser.py  router.py
oarc/cli/commands/: __init__.py  build_command.py  command_type.py  publish_command.py  run_command.py
oarc/comfyUi/: TODO_UPGRADE.txt  adventure-game.py  comfyuiGenerator.py  fastFlux.py
oarc/comfy_ui/: __TODO.md  comfy_ui_gen.py  fast_flux_lora.py
oarc/commands/: __init__.py  build_command.py  command_type.py  run_command.py  setup_command.py  upgrade_command.py
oarc/config/ini/: build.ini  oarc.ini
oarc/config_files/: setup.ini
oarc/crawlers/: __TODO.md  __init__.py  arxiv_fetcher.py  beautiful_soup.py
oarc/database/: __init__.py  agentStorage.py  agent_storage.py  agent_storage_api.py  pandas_db.py  prompt_template.py
oarc/decorators/: __init__.py  log.py
oarc/depthAnythingTools/: depthCam3.py
oarc/depth_2_anything/cycle_gan/: __TODO.md
oarc/depth_2_anything/tools/: depth_cam3.py  desktop.py
oarc/discordBot/: discordVoiceChatBot.py
oarc/fastmcp/: __init__.py
oarc/groq/: __Groq_Magic_Readme.md  groq-examples.py  groq-magic-cli.py  groq-magic-readme.md  groq-magic.py  groq_examples.py  groq_magic_cli.py
oarc/hf/: __init__.py  hf_hub.py  hf_utils.py
oarc/huggingFaceHub/: huggingFaceHub.py
oarc/math/: __TODO.md
oarc/mathModalities/: TODO_UPGRADE.txt
oarc/ollama/: __init__.py
oarc/ollama/modelfile/: conversion_manager.py  create_ollama_model.py  modelfile_writer.py  safetensors_to_gguf.py
oarc/ollama/utils/: ollama-commands-docs.md  ollama-gpu-monitor.py  ollama_commands.py  ollama_commands_upgrade.py
oarc/ollamaUtils/: __init__.py  model_write_class.py  model_writer.py  ollama-gpu-monitor-docs.md  ollamaCommands.py  ollama_commands.py
oarc/ollamaUtils/modelfileFactory/: conversion_manager.py  create_ollama_model.py  modelfile_writer.py  safetensors_to_gguf.py
oarc/pandasDB/: __init__.py  agentStorage.py  pandasDB.py
oarc/prompt/: multi_modal_prompting.py
oarc/promptModel/: __init__.py  multiModalPrompting.py  multi_modal_prompting.py
oarc/searchAPISetup/: TODO_searxng.py  __init__.py  arxiv_advanced_fetcher.py  crawl4ai_search_api.py  crawlers_module.py  ddg_search_api.py  duckduckgo_search_api.py  github_repo_cloner.py  youtubeScript.py  youtube_script.py
oarc/server/: __init__.py  server.py  server_api.py
oarc/server/gradio/: __init__.py  gradio_server.py  gradio_server_api.py
oarc/speech/: __init__.py  speech_errors.py  speech_manager.py  speech_to_text.py  speech_to_text_api.py  speech_utils.py  text_to_speech.py  text_to_speech_api.py  transcription_app.py  tts_request.py
oarc/speech/streamlabs/: streamlabs_api.py
oarc/speech/voice/: __init__.py  voice_ref_pack.py  voice_ref_pack_type.py  voice_type.py  voice_utils.py
oarc/speechToSpeech/: __init__.py  ranchez_silence_wake.py  speechToSpeech.py  speechToText.py  textToSpeech.py
oarc/stableDiffusion/: sdxl_access.py
oarc/unsloth/: __TODO.md
oarc/unslothAPI/: TODO.txt
oarc/utils/: __init__.py  const.py  log.py  paths.py  speech_utils.py
oarc/wizards/: __TODO.md  __init__.py  __ollama_chatbot_wizard_OLD.py  cmd_library.py  commandLibrary.py  flag_manager_api.py  flag_manger.py  ollamaChatbotWizard_OLD.py
oarc/yolo/: __TODO.md  __init__.py  detected_object.py  processor.py  server_api.py  yolo_processor.py  yolo_server.py  yolo_server_api.py
oarc/yoloProcessor/: Keystrokes_CLI.py  __init__.py  yoloProcessor.py
src/oarc/: __init__.py
tests/: TestAgent.py  __init__.py  async_harness.py  oarc_fast_tests.py  run_all_tests.py  runner.py  startTestAgent.py  start_test_agent.py  test_agent.py  test_oarc.py  test_oarc2.py  test_paths.py  test_tts.py  test_tts_fast.py  test_yolo.py
tests/agent/: start_test_agent.py  test_agent.py
tests/core/: oarc_fast_tests.py  oarc_tests.py  paths_tests.py
tests/speech/: test_tts.py  tts_fast_tests.py  tts_tests.py
tests/vision/: test_yolo.py
(+37 files in other folders)
