[build-system]
requires = [
    "setuptools>=70.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "oarc"
version = "0.1.0"
description = "OARC: a versatile Python package that streamlines audio processing, web API development, machine learning workflows, and speech interfaces to empower rapid prototyping and seamless integration of AI-driven functionalities."
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "OARC Team" },
]
dependencies = [
    "absl-py>=2.2.2",
    "aiofiles>=22.0,<24.0",  # Constrained to be compatible with gradio
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.16",
    "aiohttp-retry>=2.9.1",
    "aiosignal>=1.3.2",
    "aiosqlite>=0.21.0",
    "albucore>=0.0.23",
    "albumentations>=2.0.5",
    "alembic>=1.15.2",
    "altair>=5.5.0",
    "amqp>=5.3.1",
    "annotated-types>=0.7.0",
    "antlr4-python3-runtime>=4.9.3",
    "anyascii>=0.3.2",
    "anyio>=4.9.0",
    "appdirs>=1.4.4",
    "asttokens>=3.0.0",
    "astunparse>=1.6.3",
    "async-timeout>=5.0.1",
    "asyncssh>=2.20.0",
    "atpublic>=5.1",
    "attrs>=25.3.0",
    "audioread>=3.0.1",
    "Automat>=24.8.1",
    "babel>=2.17.0",
    "banal>=1.0.6",
    "banks>=2.1.1",
    "beautifulsoup4>=4.13.3",
    "billiard>=4.2.1",
    "blinker>=1.9.0",
    "blis>=1.1.0,<1.2.0",  # Fixed: Updated to be compatible with thinc (used by spacy==3.8.2)
    "bokeh>=3.7.2",
    "build>=1.2.2.post1",
    "cachetools>=5.5.2",
    "catalogue>=2.0.10",
    "celery>=5.5.0",
    "certifi>=2025.1.31",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.1",
    "chex>=0.1.89",
    "click>=8.1.8",
    "click-didyoumean>=0.3.1",
    "click-plugins>=1.1.1",
    "click-repl>=0.3.0",
    "cloudpathlib>=0.21.0",
    "colorama>=0.4.6",
    "Comet>=3.1.0",
    "confection>=0.1.5",
    "configobj>=5.0.9",
    "constantly>=23.10.4",
    "contourpy>=1.3.1",
    "coqpit-config>=0.2.0",
    "Crawl4AI==0.3.731",  # Pinned to a specific version to avoid conflicts
    "cryptography>=44.0.2",
    "cycler>=0.12.1",
    "cymem>=2.0.11",
    "Cython>=3.0.12",
    "dataclasses-json>=0.6.7",
    "dataset>=1.6.2",
    "dateparser>=1.1.8",
    "decorator>=5.2.1",
    "Deprecated>=1.2.18",
    "dictdiffer>=0.9.0",
    "dirtyjson>=1.0.8",
    "diskcache>=5.6.3",
    "distro>=1.9.0",
    "docopt>=0.6.2",
    "dpath>=2.2.0",
    "duckduckgo_search>=2025.4.4",
    "dulwich>=0.22.8",
    "dvc>=3.59.1",
    "dvc-data>=3.16.9",
    "dvc-http>=2.32.0",
    "dvc-objects>=5.1.0",
    "dvc-render>=1.0.2",
    "dvc-studio-client>=0.21.0",
    "dvc-task>=0.40.2",
    "dvclive>=3.48.2",
    "einops>=0.8.1",
    "encodec>=0.1.1",
    "entrypoints>=0.4",
    "etils>=1.12.2",
    "exceptiongroup>=1.2.2",
    "executing>=2.2.0",
    "fake-http-header>=0.3.5",
    "fastapi>=0.115.12",
    "ffmpy>=0.5.0",
    "filelock>=3.13.1",
    "filetype>=1.2.0",
    "flatbuffers>=25.2.10; platform_machine == 'aarch64'",
    "flatten-dict>=0.4.2",
    "flax>=0.10.4",
    "flufl.lock>=8.1.0",
    "fonttools>=4.57.0",
    "frozenlist>=1.5.0",
    "fsspec>=2024.6.1",
    "funcy>=2.0",
    "gast>=0.6.0",
    "gitdb>=4.0.12",
    "GitPython>=3.1.44",
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.1",
    "google-pasta>=0.2.0",
    "gradio==5.22.0",  # Fixed: Downgraded to resolve typer dependency conflict with spacy==3.7.2
    "gradio_client>=1.8.0",
    "grandalf>=0.8",
    "greenlet>=3.0.3",
    "griffe>=1.7.2",
    "groovy>=0.1.2",
    "grpcio>=1.71.0",
    "gruut>=2.4.0",
    "gruut-ipa>=0.13.0",
    "gruut_lang_de>=2.0.1",
    "gruut_lang_en>=2.0.1",
    "gruut_lang_es>=2.0.1",
    "gruut_lang_fr>=2.0.2",
    "gto>=1.7.2",
    "gTTS>=2.5.4",
    "h11>=0.14.0",
    "h5py>=3.13.0; platform_machine == 'aarch64'",
    "html2text>=2024.2.26",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "hub-sdk>=0.0.20",
    "huggingface-hub>=0.30.1",
    "humanize>=4.12.2",
    "hydra-core>=1.3.2",
    "hyperlink>=21.0.0",
    "idna>=3.10",
    "importlib_metadata>=8.6.1",
    "importlib_resources>=6.5.2",
    "incremental>=24.7.2",
    "inflect>=7.5.0",
    "ipython>=8.34.0",
    "iterative-telemetry>=0.0.10",
    "jax>=0.4.34",
    "jaxlib>=0.4.34",
    "jedi>=0.19.2",
    "jiter>=0.9.0",
    "joblib>=1.4.2",
    "jsonlines>=1.2.0",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2024.10.1",
    "keras>=2.15.0",
    "keyboard>=0.13.5",
    "kiwisolver>=1.4.8",
    "kombu>=5.5.2",
    "langcodes>=3.5.0",
    "language_data>=1.3.0",
    "lazy_loader>=0.4",
    "libclang>=18.1.1",
    "librosa>=0.11.0",
    "litellm>=1.65.3",
    "llama-cloud>=0.1.17",
    "llama-cloud-services>=0.6.9",
    "llama-index>=0.9.48",  # Updated to newer version with experimental features
    "llama-index-agent-openai>=0.4.6",
    "llama-index-cli>=0.4.1",
    "llama-index-core>=0.9.48",  # Added explicit core version
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-experimental>=0.1.5",  # Added experimental package
    "llama-index-indices-managed-llama-cloud>=0.6.11",
    "llama-index-llms-openai>=0.3.30",
    "llama-index-multi-modal-llms-openai>=0.4.3",
    "llama-index-program-openai>=0.3.1",
    "llama-index-question-gen-openai>=0.3.0",
    "llama-index-readers-file>=0.4.7",
    "llama-index-readers-llama-parse>=0.4.0",
    "llama-parse>=0.6.4.post1",
    "llvmlite>=0.44.0",
    "lxml>=5.3.1",
    "Mako>=1.3.9",
    "marisa-trie>=1.2.1",
    "Markdown>=3.7",
    "markdown-it-py>=3.0.0",
    "marshmallow>=3.26.1",
    "matplotlib>=3.10.1",
    "matplotlib-inline>=0.1.7",
    "mdurl>=0.1.2",
    "ml-dtypes>=0.3.2",
    "monotonic-alignment-search>=0.1.1",
    "more-itertools>=10.6.0",
    "mpmath>=1.3.0",
    "msgpack>=1.1.0",
    "multidict>=6.3.2",
    "murmurhash>=1.0.12",
    "mypy-extensions>=1.0.0",
    "narwhals>=1.33.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.3",
    "nltk>=3.9.1",
    "num2words>=0.5.14",
    "numba>=0.61.0",
    "numpy>=2.0.0,<=2.1.1",  # Updated to be compatible with ultralytics which requires numpy<=2.1.1
    "nvidia-ml-py>=12.570.86",
    "oauthlib>=3.2.2",
    "ollama>=0.4.7",
    "omegaconf>=2.3.0",
    "onnx>=1.17.0",
    "openai>=1.70.0",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "openvino>=2025.0.0",
    "openvino-telemetry>=2025.1.0",
    "opt_einsum>=3.4.0",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.5",
    "orjson>=3.10.16",
    "packaging>=23.2",
    "pandas>=2.2.3",
    "parso>=0.8.4",
    "pathspec>=0.12.1",
    "pillow==10.4.0",  # Kept pinned to exact version required by Crawl4AI
    "platformdirs>=4.3.7",
    "playwright>=1.47.0",
    "pooch>=1.8.2",
    "preshed>=3.0.9",
    "primp>=0.14.0",
    "prompt_toolkit>=3.0.50",
    "propcache>=0.3.1",
    "protobuf>=4.25.6",
    "psutil>=7.0.0",
    "pure_eval>=0.2.3",
    "py-cpuinfo>=9.0.0",
    "pyarrow>=19.0.1",
    "pyasn1>=0.6.1",
    "pyasn1_modules>=0.4.2",
    "PyAudio>=0.2.14",
    "pycocotools>=2.0.8",
    "pycparser>=2.22",
    "pydantic>=2.11.2",
    "pydantic_core>=2.33.1",
    "pydeck>=0.9.1",
    "pydot>=3.0.4",
    "pydub>=0.25.1",
    "pyee>=12.0.0",
    "pygame>=2.6.1",
    "pygit2>=1.17.0",
    "Pygments>=2.19.1",
    "pygtrie>=2.5.0",
    "pynvml>=12.0.0",
    "pyparsing>=3.2.3",
    "pypdf>=5.4.0",
    "pyproject_hooks>=1.2.0",
    "PyQt6>=6.8.1",
    "PyQt6-Qt6>=6.8.2",
    "PyQt6_sip>=13.10.0",
    "pysbd>=0.3.4",
    "python-crfsuite>=0.9.11",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyvirtualcam>=0.12.1",
    "pywin32>=310; platform_system == 'Windows'",
    "PyYAML>=6.0.2",
    "referencing>=0.36.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "rich>=14.0.0",
    "rpds-py>=0.24.0",
    "rsa>=4.9",
    "ruamel.yaml>=0.18.10",
    "ruamel.yaml.clib>=0.2.12",
    "safehttpx>=0.1.6",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "scmrepo>=3.3.10",
    "seaborn>=0.13.2",
    "semantic-version>=2.10.0",
    "semver>=3.0.4",
    "setuptools>=78.1.0",
    "shellingham>=1.5.4",
    "shortuuid>=1.0.13",
    "shtab>=1.7.1",
    "simplejson>=3.20.1",
    "simsimd>=6.2.1",
    "six>=1.17.0",
    "smart-open>=5.2.1,<7.0.0",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "soupsieve>=2.6",
    "soxr>=0.5.0.post1",
    "spacy==3.8.2",  # Fixed: Upgraded spacy so it supports newer typer versions
    "spacy-legacy>=3.0.12",
    "spacy-loggers>=1.0.5",
    "SpeechRecognition>=3.14.2",
    "SQLAlchemy>=1.4.54",
    "sqltrie>=0.11.2",
    "srsly>=2.5.1",
    "stack-data>=0.6.3",
    "starlette>=0.46.1",
    "streamlit>=1.44.1",
    "stringzilla>=3.12.3",
    "striprtf>=0.0.26",
    "SudachiDict-core>=20250129",
    "SudachiPy>=0.6.10",
    "sympy>=1.13.1",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    # "tensorboard==2.15.0",  # Removed to allow for newer numpy versions
    # "tensorboard-data-server>=0.7.2",
    # "tensorflow-estimator>=2.15.0",
    # "tensorflow-hub>=0.16.1",
    # "tensorflow-io-gcs-filesystem>=0.31.0",
    "tensorstore>=0.1.73; platform_machine == 'aarch64' and python_version >= '3.9'",
    "termcolor>=3.0.1",
    "tf_keras>=2.15.1",
    "tf-playwright-stealth>=1.1.2",
    "thinc>=8.3.0,<8.4.0",  # Updated to satisfy spacy==3.8.2 dependency
    "threadpoolctl>=3.6.0",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "toolz>=1.0.0",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "transformers>=4.50.3",
    "treescope>=0.1.9",
    "Twisted>=24.11.0",
    "typeguard>=4.4.2",
    "typer>=0.12.0",  # Fixed: Updated to be compatible with gradio==5.22.0 and spacy==3.8.2
    "typing_extensions>=4.12.2",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.0",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "ultralytics>=8.3.102",
    "ultralytics-thop>=2.0.14",
    "urllib3>=2.3.0",
    "uv>=0.6.12",
    "uvicorn>=0.34.0",
    "vine>=5.1.0",
    "voluptuous>=0.15.2",
    "wasabi>=1.1.3",
    "watchdog>=6.0.0",
    "wcwidth>=0.2.13",
    "weasel>=0.4.1",  # Fixed: Upgraded weasel for compatibility with pydantic>=2.11.2, cloudpathlib>=0.21.0, and typer>=0.12.0
    "websockets>=15.0.1",
    "Werkzeug>=3.1.3",
    "wheel>=0.45.1",
    "wrapt>=1.14.1",
    "wurlitzer>=3.1.1",
    "xyzservices>=2025.1.0",
    "yarl>=1.18.3",
    "zc.lockfile>=3.0.post1",
    "zipp>=3.21.0",
    "zope.interface>=7.2",
    "whisper>=1.1.10"
]

[project.optional-dependencies]
tensorflow = [
    "numpy<2.0.0,>=1.26.0",  # Version required by tensorflow 2.15.1
    "tensorboard<2.16.0,>=2.15.0",
    "tensorflow==2.15.1",
    "tensorflow-decision-forests==1.8.1",
    "tensorflow-intel==2.15.1",
]

dev = [
    "black",
    "coverage[toml]>=7",
    "flake8",
    "furo>=2024.8.6",
    "packaging>=23.0; python_version < '3.12'",
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.9.3",
    "sphinx==7.4.7; python_version < '3.12'",
    "sphinx_copybutton>=0.5.2",
    "tomli",
    "tomli_w>=1.2.0",  # Fixed: Changed from 1.2.1 to 1.2.0 (latest available version)
    "twine",
]

[project.scripts]
oarc = "oarc.main:main"

[tool.setuptools]
packages = [
    "oarc",
]

[tool.setuptools.package-dir]
"" = "."
