[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oarc"
version = "0.1.0"
description = "OARC Python Package"
readme = "README.md"
requires-python = ">=3.10, <3.12"
authors = [
    {name = "OARC Team"}
]
dependencies = [
    # Build tools
    "setuptools>=45",
    "wheel",
    "build",
    # Core libraries
    "numpy>=2.1.1",
    "scipy>=1.13.0",
    "cython>=0.30.0",
    # Audio processing
    "soundfile>=0.12.0",
    "sounddevice>=0.5.1",
    "librosa>=0.11.0",
    "numba>=0.56.0",
    "llvmlite>=0.39.0",
    "pyaudio>=0.2.13",
    # Web & API
    "fastapi>=0.68.0",
    "python-multipart>=0.0.5",
    "pydantic>=1.8.0",
    "requests>=2.26.0",
    "uvicorn>=0.15.0",
    "websockets>=10.0",
    "gradio>=4.19.0",
    # Machine Learning
    "transformers>=4.47.0",
    "ollama>=0.4.7",
    "llama-index>=0.12.26",
    "llama-index-experimental>=0.5.4",
    "opencv-python>=4.8.0",
    "ultralytics>=8.3.102",
    # Speech
    "SpeechRecognition>=3.8.1",
    "openai-whisper>=20240930",
    "gtts>=2.3.2",
    "pygame>=2.5.2",
    # TTS dependencies
    "inflect>=5.6.0",
    "tqdm>=4.64.1",
    "anyascii>=0.3.0",
    "pysbd>=0.3.4",
    "einops>=0.6.0",
    "encodec>=0.1.1",
    "num2words>=0.5.14",
    # Utilities
    "pyyaml>=6.0",
    "fsspec[http]>=2023.6.0",
    "packaging>=23.1",
    "typing_extensions>=4.10",
    "keyboard>=0.13.5",
    "pandas>=1.3.0",
    "matplotlib>=3.8.4",
    # GUI dependencies
    "PyQt6>=6.4.0",
    # Windows-specific dependencies
    "pywin32>=306; platform_system == 'Windows'",
    "pyvirtualcam>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "black",
    "flake8",
    "twine", 
    "coverage[toml]>=7",
    "pre-commit>=4",
    "ruff==0.9.1",
    "sphinx==7.4.7",
    "furo>=2024.8.6",
    "sphinx_copybutton>=0.5.2",
    "bokeh>=3.0.3",
    "umap-learn>=0.5.1",
]

[project.scripts]
oarc = "oarc.main:main"

[tool.setuptools]
packages = ["oarc"]
package-dir = {"" = "."}
