[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oarc"
version = "0.1.1"
description = "OARC Python Package"
readme = "README.md"
requires-python = ">=3.10, <3.12"
authors = [
    {name = "OARC Team"}
]
dependencies = [
    # Build tools
    "build",
    "setuptools>=45",
    "wheel",
    # Core libraries
    "cython>=0.30.0",
    "llvmlite>=0.39.0",
    "numpy~=2.1.1",
    "scipy>=1.13.0",
    # Audio processing
    "librosa>=0.11.0",
    "numba>=0.56.0",
    "pyaudio>=0.2.13",
    "sounddevice>=0.5.1",
    "soundfile>=0.12.0",
    # GUI dependencies
    "PyQt6>=6.4.0",
    # Machine Learning
    "llama-index-experimental>=0.5.4",
    "llama-index>=0.12.26",
    "opencv-python>=4.8.0",
    "ollama>=0.4.7",
    "transformers>=4.47.0",
    "ultralytics>=8.3.102",
    # Speech
    "SpeechRecognition>=3.8.1",
    "gtts>=2.3.2",
    "openai-whisper>=20240930",
    "pygame>=2.5.2",
    # TTS dependencies
    "anyascii>=0.3.0",
    "einops>=0.6.0",
    "encodec>=0.1.1",
    "inflect>=5.6.0",
    "num2words>=0.5.14",
    "pysbd>=0.3.4",
    "tqdm>=4.64.1",
    # Utilities
    "fsspec[http]>=2023.6.0",
    "keyboard>=0.13.5",
    "matplotlib>=3.8.4",
    "packaging>=23.1",
    "pandas>=1.3.0",
    "pyyaml>=6.0",
    "typing_extensions>=4.10",
    # Web & API
    "fastapi>=0.68.0",
    "gradio>=4.19.0",
    "pydantic>=1.8.0",
    "python-multipart>=0.0.5",
    "requests>=2.26.0",
    "uvicorn>=0.15.0",
    "websockets>=10.0",
    # Windows-specific dependencies
    "discord>=2.3.2",
    "pyvirtualcam>=0.12.1",
    "pywin32>=306; platform_system == 'Windows'",
    "pytube>=15.0.0",
]

[project.optional-dependencies]
dev = [
    # Code formatting and linting
    "black",
    "flake8",
    "ruff==0.9.1",
    "pre-commit>=4",
    # Testing
    "pytest>=8",
    "coverage[toml]>=7",
    # Documentation
    "sphinx==7.4.7",
    "furo>=2024.8.6",
    "sphinx_copybutton>=0.5.2",
    # Publishing
    "twine",
    # Visualization
    "bokeh>=3.0.3",
    "umap-learn>=0.5.1",
]

[project.scripts]
oarc = "oarc.main:main"

[tool.setuptools]
packages = ["oarc"]
package-dir = {"" = "."}
