[metadata]
name = oarc
version = 0.1.0
author = Leo Borcherding
author_email = your.email@example.com
description = Ollama Agent Roll Cage - Speech to Speech with Vision AI Chatbot API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/oarc
project_urls =
    Bug Tracker = https://github.com/yourusername/oarc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.68.0
    uvicorn>=0.15.0
    pandas>=1.3.0
    torch>=1.9.0
    transformers>=4.0.0
    TTS>=0.8.0
    SpeechRecognition>=3.8.1
    ollama>=0.1.0
    whisper>=1.0
    websockets>=10.0
    numpy>=1.19.0
    pyaudio>=0.2.11
    keyboard>=0.13.5
    requests>=2.26.0
    pydantic>=1.8.0
    python-multipart>=0.0.5

[options.packages.find]
where = src

[options.package_data]
oarc = 
    promptModel/*.json
    ollamaUtils/templates/*.json
    speechToSpeech/voices/*.wav